--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -8,8 +8,7 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-
 EXPOSE 8000
 
-CMD ["sh"]
+CMD ["tail", "-f", "/dev/null"]
+# CMD ["uvicorn", "main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000", "--reload"]
