--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -10,5 +10,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["tail", "-f", "/dev/null"]
-# CMD ["uvicorn", "main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# CMD ["tail", "-f", "/dev/null"]
+CMD ["uvicorn", "main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000", "--reload"]
