feat: streamlit part, but there's some conflict with packages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,16 @@ services:
       - clima
     volumes:
       - ./backend:/app
+
+  frontend:
+    build:
+      context: frontend/
+    ports:
+      - "8501:8501"
+    networks:
+      - clima
+    volumes:
+      - ./frontend:/app
+
 networks:
   clima:
